# GNFish

./: README.md  pyproject.toml
Code/: align_sequences.py  blast.py  get_combined_seqs.py  get_genomes.py  get_query_sequences.py
Example/: protein_query_seqs.fas  query_genome_1.txt  query_genome_2.txt  query_seqs_1.txt  query_seqs_2.txt  query_seqs_3.txt
gnfish/: align_sequences.py  alignment_trimming.py  blast.py  class_list_files.py  decompress_genomes.py  get_RAW_sequences.py  get_combined_seqs.py  get_genomes.py  get_query_sequences.py  get_raw_sequences.py  get_unique_hits.py  phylogenetic_inference.py  translate_sequences.py  utils.py
test/: test_align_sequences.py  test_alignment_trimming.py  test_blast.py  test_decompress_genomes.py  test_get_RAW_sequences.py  test_get_combined_seqs.py  test_get_genomes.py  test_get_query_sequences.py  test_get_raw_sequences.py  test_get_unique_hits.py  test_phylogenetic_inference.py  test_translate_sequences.py
test/data/: AQP16_8_ali_extract.fasta  Bole_AQP11_12_all_combined.fas  Bole_AQP11_12_all_combined_3_ali.fas  Bole_AQP11_12_all_combined_ali_trim2.fas  Boleophthalmus_pectinirostris_14439011_rna.fna  Boleophthalmus_pectinirostris_14439011_rna_Boleophthalmus_pectinirostris_AQP11_XM_020938655_1_extraction_RAW_2.fas  Boleophthalmus_pectinirostris_14439011_rna_Boleophthalmus_pectinirostris_AQP11_XM_020938655_1_extraction_RAW_translated.fas  Boleophthalmus_pectinirostris_14439011_rna_Boleophthalmus_pectinirotris_AQP12_XM_020918822_2_extraction_RAW.fas  Boleophthalmus_pectinirostris_14439011_rna_out_2.tsv  query.txt  (+3 more)
